--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
 Description: CTfilter allows the selection of specific cell types from sigle-cell data. Given a query single-cell data set, the package evaluates a panel of gene signatures, and returns only the cells enriched for the desired cell type, while removing cells with high signature scores for other cell types.
 Depends: R (>= 3.6.1),Seurat(>= 3.2.1),data.table(>= 1.13.6)
 Suggests: future.apply
-Imports: 
+Imports: UCell(>= 0.1.1)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
