--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(get_scGateDB)
 export(load_scGate_model)
 export(performance.metrics)
+export(plot_levels)
 export(plot_tree)
 export(scGate)
 export(test_my_model)
