--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: scGate
 Type: Package
 Title: Cell-type filter for single-cell sequencing data
-Version: 1.0.0
+Version: 1.0.1
 Authors@R: c(
   person(given = 'Massimo', family = 'Andreatta', email = 'massimo.andreatta@unil.ch', role = c('aut','cre'), comment = c(ORCID = '0000-0002-8036-2647')), 
   person(given = 'Santiago', family = 'Carmona', email = 'santiago.carmona@unil.ch', role = c('aut'), comment = c(ORCID = '0000-0002-2495-0671')),
   person(given = 'Ariel', family = 'Berenstein', email = 'arieljberenstein@gmail.com', role = c('aut'), comment = c(ORCID = '0000-0001-8540-5389'))
   )
 Description: scGate allows filtering of specific cell types from sigle-cell data. Given a query single-cell data set, the package evaluates a panel of gene signatures, and returns only the cells enriched for the desired cell type, while removing cells with high signature scores for other cell types.
-Depends: R(>= 3.6.1),Seurat(>= 3.2.1),data.table(>= 1.13.6),UCell(>= 1.1.0),dplyr
+Depends: R(>= 3.6.1),Seurat(>= 3.2.1),data.table(>= 1.13.6),UCell(>= 1.1.0),dplyr,patchwork,ggridges,reshape2
 Suggests: future.apply,ggparty
 License: GPL-3
 Encoding: UTF-8
