--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ export(gating_model)
 export(get_scGateDB)
 export(get_testing_data)
 export(load_scGate_model)
-export(modify_model)
 export(performance.metrics)
+export(plot_UCell_scores)
 export(plot_levels)
 export(plot_tree)
 export(scGate)
 export(test_my_model)
+import(ggridges)
+import(patchwork)
+import(reshape2)
