--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: scGate
 Type: Package
 Title: Cell-type filter for single-cell sequencing data
-Version: 1.1.0
+Version: 1.1.1
 Authors@R: c(
   person(given = 'Massimo', family = 'Andreatta', email = 'massimo.andreatta@unil.ch', role = c('aut','cre'), comment = c(ORCID = '0000-0002-8036-2647')),
   person(given = 'Ariel', family = 'Berenstein', email = 'arieljberenstein@gmail.com', role = c('aut'), comment = c(ORCID = '0000-0001-8540-5389')), 
@@ -9,14 +9,16 @@ Authors@R: c(
   )
 Description: scGate allows filtering of specific cell types from sigle-cell data. Given a query single-cell data set, the package evaluates a panel of gene signatures, and returns only the cells enriched for the desired cell type, while removing cells with high signature scores for other cell types.
 biocViews:
-Depends: R(>= 4.2.0),
-    Seurat(>= 4.0.0),
-    data.table(>= 1.13.6),
+Depends: R(>= 4.1.0)
+Imports: Seurat(>= 4.0.0),
     UCell(>= 1.1.0),
     dplyr,
+    stats,
+    utils,
     patchwork,
     ggridges,
-    reshape2
+    reshape2,
+    ggplot2
 Suggests: ggparty
 License: GPL-3
 Encoding: UTF-8
