--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,16 @@ export(plot_levels)
 export(plot_tree)
 export(scGate)
 export(test_my_model)
-import(ggridges)
-import(patchwork)
-import(reshape2)
+import(Seurat)
+import(ggplot2)
+importFrom(UCell,AddModuleScore_UCell)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,distinct)
+importFrom(ggridges,geom_density_ridges)
+importFrom(patchwork,wrap_plots)
+importFrom(reshape2,melt)
+importFrom(stats,setNames)
+importFrom(utils,download.file)
+importFrom(utils,read.table)
+importFrom(utils,unzip)
