new get_scGateDB() function
1. DB update detection
2. Unified cache location across different run of scGate
3. The method to fetch the older version remains the same

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,11 @@ Imports: Seurat(>= 4.0.0),
     patchwork,
     ggridges,
     reshape2,
-    ggplot2
+    ggplot2,
+    BiocFileCache,
+    tools
 Suggests: ggparty
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
