--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(gating_model)
 export(get_scGateDB)
 export(get_testing_data)
 export(load_scGate_model)
-export(performance.metrics)
+export(performance_metrics)
 export(plot_UCell_scores)
 export(plot_levels)
 export(plot_tree)
@@ -13,6 +13,11 @@ export(scGate)
 export(test_my_model)
 import(Seurat)
 import(ggplot2)
+importFrom(BiocFileCache,BiocFileCache)
+importFrom(BiocFileCache,bfcadd)
+importFrom(BiocFileCache,bfcdownload)
+importFrom(BiocFileCache,bfcneedsupdate)
+importFrom(BiocFileCache,bfcquery)
 importFrom(UCell,AddModuleScore_UCell)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
@@ -21,6 +26,7 @@ importFrom(ggridges,geom_density_ridges)
 importFrom(patchwork,wrap_plots)
 importFrom(reshape2,melt)
 importFrom(stats,setNames)
+importFrom(tools,R_user_dir)
 importFrom(utils,download.file)
 importFrom(utils,read.table)
 importFrom(utils,unzip)
