Add timeout limit = 5s when no internet connection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(BiocFileCache,bfcadd)
 importFrom(BiocFileCache,bfcdownload)
 importFrom(BiocFileCache,bfcneedsupdate)
 importFrom(BiocFileCache,bfcquery)
+importFrom(R.utils,withTimeout)
 importFrom(UCell,AddModuleScore_UCell)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
