--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,26 @@
 Package: scGate
 Type: Package
 Title: Cell-type filter for single-cell sequencing data
-Version: 1.2.0
+Version: 1.3.0
 Authors@R: c(
-  person(given = 'Massimo', family = 'Andreatta', email = 'massimo.andreatta@unil.ch', role = c('aut','cre'), comment = c(ORCID = '0000-0002-8036-2647')),
-  person(given = 'Ariel', family = 'Berenstein', email = 'arieljberenstein@gmail.com', role = c('aut'), comment = c(ORCID = '0000-0001-8540-5389')), 
-  person(given = 'Santiago', family = 'Carmona', email = 'santiago.carmona@unil.ch', role = c('aut'), comment = c(ORCID = '0000-0002-2495-0671')) 
+  person('Massimo', 'Andreatta',
+    email = 'massimo.andreatta@unil.ch',
+    role = c('aut','cre'),
+    comment = c(ORCID = '0000-0002-8036-2647')),
+  person('Ariel','Berenstein',
+    email = 'arieljberenstein@gmail.com',
+    role = c('aut'),
+    comment = c(ORCID = '0000-0001-8540-5389')), 
+  person('Santiago', 'Carmona',
+    email = 'santiago.carmona@unil.ch',
+    role = c('aut'),
+    comment = c(ORCID = '0000-0002-2495-0671')) 
   )
-Description: scGate allows filtering of specific cell types from sigle-cell data. Given a query single-cell data set, the package evaluates a panel of gene signatures, and returns only the cells enriched for the desired cell type, while removing cells with high signature scores for other cell types.
+Description: scGate purifies specific cell types from sigle-cell data. Given a query single-cell data set, the package evaluates a panel of gene signatures, and returns only the cells enriched for the desired cell type(s), while removing cells with high signature scores for other cell types.
 biocViews:
-Depends: R(>= 4.1.0)
+Depends: R(>= 4.2.0)
 Imports: Seurat(>= 4.0.0),
-    UCell(>= 1.1.0),
+    UCell(>= 2.0.0),
     dplyr,
     stats,
     utils,
@@ -23,4 +32,4 @@ Suggests: ggparty
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
