--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(test_my_model)
 import(Seurat)
 import(ggplot2)
 importFrom(UCell,AddModuleScore_UCell)
+importFrom(UCell,SmoothKNN)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
