--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(plot_levels)
 export(plot_tree)
 export(scGate)
 export(test_my_model)
+import(BiocParallel)
 import(Seurat)
 import(ggplot2)
 importFrom(UCell,AddModuleScore_UCell)
