--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,14 @@ export(test_my_model)
 import(BiocParallel)
 import(Seurat)
 import(ggplot2)
+importFrom(Seurat,DimPlot)
 importFrom(UCell,AddModuleScore_UCell)
 importFrom(UCell,SmoothKNN)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(ggridges,geom_density_ridges)
+importFrom(methods,is)
 importFrom(patchwork,wrap_plots)
 importFrom(reshape2,melt)
 importFrom(stats,setNames)
