add Josep G. to author list

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Authors@R: c(
     email = 'arieljberenstein@gmail.com',
     role = c('aut'),
     comment = c(ORCID = '0000-0001-8540-5389')), 
-  person('Changsheng','Li',
-    email = 'changsheng.li@alum.esci.upf.edu',
+  person('Josep','Garnica',
+    email = 'josep.garnicacaparros@unil.ch',
     role = c('aut')),  
   person('Santiago', 'Carmona',
     email = 'santiago.carmona@unil.ch',
